// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppShell > snapshot: RTL render with all props 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      style="min-height: 100vh; display: flex; flex-direction: column;"
    >
      <nav
        aria-label="Main navigation"
        role="navigation"
        style="height: 56px; background-color: rgb(255, 255, 255); border-block-end: 1px solid hsl(210, 12%, 87%); display: flex; align-items: center; padding-inline-start: 1rem; padding-inline-end: 1rem; font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; position: relative; z-index: 100;"
      >
        <span
          style="font-weight: 700; color: rgb(26, 102, 71); font-size: 1.25rem; white-space: nowrap;"
        >
          OPD-Lite
        </span>
        <button
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="appshell-hamburger-_r_k_"
          style="background: none; cursor: pointer; margin-inline-start: auto; margin-inline-end: 0.5rem; padding: 0.25rem; font-size: 1.5rem; line-height: 1; color: rgb(76, 84, 93);"
          type="button"
        >
          ☰
        </button>
        <div
          class="appshell-nav-links-_r_k_ "
          style="display: flex; align-items: center; gap: 0.25rem; margin-inline-start: 2rem; flex: 1 1 0%;"
        >
          <a
            aria-current="page"
            href="/dashboard"
            style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(34, 129, 91); text-decoration: none; border-block-end: 2px solid hsl(156, 58%, 32%); transition: color 150ms ease, border-color 150ms ease;"
          >
            Dashboard
          </a>
          <a
            href="/patients"
            style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
          >
            Patients
          </a>
          <a
            href="/schedule"
            style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
          >
            Schedule
          </a>
        </div>
        <div
          style="display: flex; align-items: center; gap: 0.5rem; margin-inline-start: auto;"
        >
          <div
            style="position: relative;"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="User menu for Dr. Ahmad"
              style="width: 32px; height: 32px; border-radius: 9999px; background-color: rgb(214, 245, 233); color: rgb(26, 102, 71); font-weight: 600; font-size: 0.875rem; cursor: pointer; display: flex; align-items: center; justify-content: center; padding: 0px; line-height: 1;"
              type="button"
            >
              DA
            </button>
          </div>
        </div>
      </nav>
      <style>
        
            @media (min-width: 641px) {
              .appshell-hamburger-_r_k_ { display: none !important; }
            }
            @media (max-width: 640px) {
              .appshell-nav-links-_r_k_ {
                display: none !important;
                position: absolute;
                inset-block-start: 56px;
                inset-inline-start: 0;
                inset-inline-end: 0;
                flex-direction: column;
                background: hsl(0, 0%, 100%);
                border-block-end: 1px solid hsl(210, 12%, 87%);
                padding-block: 0.5rem;
                padding-inline: 0.5rem;
                z-index: 99;
              }
              .appshell-nav-links-open-_r_k_ {
                display: flex !important;
              }
            }
          
      </style>
      <div
        style="flex: 1 1 0%;"
      >
        <main>
          Main Content
        </main>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppShell > snapshot: RTL render with user=null 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      style="min-height: 100vh; display: flex; flex-direction: column;"
    >
      <nav
        aria-label="Main navigation"
        role="navigation"
        style="height: 56px; background-color: rgb(255, 255, 255); border-block-end: 1px solid hsl(210, 12%, 87%); display: flex; align-items: center; padding-inline-start: 1rem; padding-inline-end: 1rem; font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; position: relative; z-index: 100;"
      >
        <span
          style="font-weight: 700; color: rgb(26, 102, 71); font-size: 1.25rem; white-space: nowrap;"
        >
          OPD-Lite
        </span>
        <button
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="appshell-hamburger-_r_l_"
          style="background: none; cursor: pointer; margin-inline-start: auto; margin-inline-end: 0.5rem; padding: 0.25rem; font-size: 1.5rem; line-height: 1; color: rgb(76, 84, 93);"
          type="button"
        >
          ☰
        </button>
        <div
          class="appshell-nav-links-_r_l_ "
          style="display: flex; align-items: center; gap: 0.25rem; margin-inline-start: 2rem; flex: 1 1 0%;"
        >
          <a
            aria-current="page"
            href="/dashboard"
            style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(34, 129, 91); text-decoration: none; border-block-end: 2px solid hsl(156, 58%, 32%); transition: color 150ms ease, border-color 150ms ease;"
          >
            Dashboard
          </a>
          <a
            href="/patients"
            style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
          >
            Patients
          </a>
          <a
            href="/schedule"
            style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
          >
            Schedule
          </a>
        </div>
        <div
          style="display: flex; align-items: center; gap: 0.5rem; margin-inline-start: auto;"
        />
      </nav>
      <style>
        
            @media (min-width: 641px) {
              .appshell-hamburger-_r_l_ { display: none !important; }
            }
            @media (max-width: 640px) {
              .appshell-nav-links-_r_l_ {
                display: none !important;
                position: absolute;
                inset-block-start: 56px;
                inset-inline-start: 0;
                inset-inline-end: 0;
                flex-direction: column;
                background: hsl(0, 0%, 100%);
                border-block-end: 1px solid hsl(210, 12%, 87%);
                padding-block: 0.5rem;
                padding-inline: 0.5rem;
                z-index: 99;
              }
              .appshell-nav-links-open-_r_l_ {
                display: flex !important;
              }
            }
          
      </style>
      <div
        style="flex: 1 1 0%;"
      >
        <main>
          Main Content
        </main>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppShell > snapshot: default render with all props 1`] = `
<div>
  <div
    style="min-height: 100vh; display: flex; flex-direction: column;"
  >
    <nav
      aria-label="Main navigation"
      role="navigation"
      style="height: 56px; background-color: rgb(255, 255, 255); border-block-end: 1px solid hsl(210, 12%, 87%); display: flex; align-items: center; padding-inline-start: 1rem; padding-inline-end: 1rem; font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; position: relative; z-index: 100;"
    >
      <span
        style="font-weight: 700; color: rgb(26, 102, 71); font-size: 1.25rem; white-space: nowrap;"
      >
        OPD-Lite
      </span>
      <button
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="appshell-hamburger-_r_i_"
        style="background: none; cursor: pointer; margin-inline-start: auto; margin-inline-end: 0.5rem; padding: 0.25rem; font-size: 1.5rem; line-height: 1; color: rgb(76, 84, 93);"
        type="button"
      >
        ☰
      </button>
      <div
        class="appshell-nav-links-_r_i_ "
        style="display: flex; align-items: center; gap: 0.25rem; margin-inline-start: 2rem; flex: 1 1 0%;"
      >
        <a
          aria-current="page"
          href="/dashboard"
          style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(34, 129, 91); text-decoration: none; border-block-end: 2px solid hsl(156, 58%, 32%); transition: color 150ms ease, border-color 150ms ease;"
        >
          Dashboard
        </a>
        <a
          href="/patients"
          style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
        >
          Patients
        </a>
        <a
          href="/schedule"
          style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
        >
          Schedule
        </a>
      </div>
      <div
        style="display: flex; align-items: center; gap: 0.5rem; margin-inline-start: auto;"
      >
        <div
          style="position: relative;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="User menu for Dr. Ahmad"
            style="width: 32px; height: 32px; border-radius: 9999px; background-color: rgb(214, 245, 233); color: rgb(26, 102, 71); font-weight: 600; font-size: 0.875rem; cursor: pointer; display: flex; align-items: center; justify-content: center; padding: 0px; line-height: 1;"
            type="button"
          >
            DA
          </button>
        </div>
      </div>
    </nav>
    <style>
      
            @media (min-width: 641px) {
              .appshell-hamburger-_r_i_ { display: none !important; }
            }
            @media (max-width: 640px) {
              .appshell-nav-links-_r_i_ {
                display: none !important;
                position: absolute;
                inset-block-start: 56px;
                inset-inline-start: 0;
                inset-inline-end: 0;
                flex-direction: column;
                background: hsl(0, 0%, 100%);
                border-block-end: 1px solid hsl(210, 12%, 87%);
                padding-block: 0.5rem;
                padding-inline: 0.5rem;
                z-index: 99;
              }
              .appshell-nav-links-open-_r_i_ {
                display: flex !important;
              }
            }
          
    </style>
    <div
      style="flex: 1 1 0%;"
    >
      <main>
        Main Content
      </main>
    </div>
  </div>
</div>
`;

exports[`AppShell > snapshot: render with user=null (unauthenticated state) 1`] = `
<div>
  <div
    style="min-height: 100vh; display: flex; flex-direction: column;"
  >
    <nav
      aria-label="Main navigation"
      role="navigation"
      style="height: 56px; background-color: rgb(255, 255, 255); border-block-end: 1px solid hsl(210, 12%, 87%); display: flex; align-items: center; padding-inline-start: 1rem; padding-inline-end: 1rem; font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; position: relative; z-index: 100;"
    >
      <span
        style="font-weight: 700; color: rgb(26, 102, 71); font-size: 1.25rem; white-space: nowrap;"
      >
        OPD-Lite
      </span>
      <button
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="appshell-hamburger-_r_j_"
        style="background: none; cursor: pointer; margin-inline-start: auto; margin-inline-end: 0.5rem; padding: 0.25rem; font-size: 1.5rem; line-height: 1; color: rgb(76, 84, 93);"
        type="button"
      >
        ☰
      </button>
      <div
        class="appshell-nav-links-_r_j_ "
        style="display: flex; align-items: center; gap: 0.25rem; margin-inline-start: 2rem; flex: 1 1 0%;"
      >
        <a
          aria-current="page"
          href="/dashboard"
          style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(34, 129, 91); text-decoration: none; border-block-end: 2px solid hsl(156, 58%, 32%); transition: color 150ms ease, border-color 150ms ease;"
        >
          Dashboard
        </a>
        <a
          href="/patients"
          style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
        >
          Patients
        </a>
        <a
          href="/schedule"
          style="display: inline-flex; align-items: center; gap: 0.375rem; padding-inline-start: 0.75rem; padding-inline-end: 0.75rem; padding-block-start: 0.5rem; padding-block-end: 0.5rem; font-weight: 500; font-size: 0.875rem; color: rgb(76, 84, 93); text-decoration: none; border-block-end: 2px solid transparent; transition: color 150ms ease, border-color 150ms ease;"
        >
          Schedule
        </a>
      </div>
      <div
        style="display: flex; align-items: center; gap: 0.5rem; margin-inline-start: auto;"
      />
    </nav>
    <style>
      
            @media (min-width: 641px) {
              .appshell-hamburger-_r_j_ { display: none !important; }
            }
            @media (max-width: 640px) {
              .appshell-nav-links-_r_j_ {
                display: none !important;
                position: absolute;
                inset-block-start: 56px;
                inset-inline-start: 0;
                inset-inline-end: 0;
                flex-direction: column;
                background: hsl(0, 0%, 100%);
                border-block-end: 1px solid hsl(210, 12%, 87%);
                padding-block: 0.5rem;
                padding-inline: 0.5rem;
                z-index: 99;
              }
              .appshell-nav-links-open-_r_j_ {
                display: flex !important;
              }
            }
          
    </style>
    <div
      style="flex: 1 1 0%;"
    >
      <main>
        Main Content
      </main>
    </div>
  </div>
</div>
`;
